@@ -16,7 +16,8 @@ Changes:
 Ongoing changes:
 
 * CSV format for results export (GUI, not CL yet)
-* Handling of verbosity/warnings in log
+* Handling of verbosity in log: PrismLog updated, not used yet
+* Handling of warnings in log
 * Properties can be named, by prefixing with "name":, and reference each other
 * CTL AG/EF
 
